unpackaged/objects/BLND_DFDT_Resource__c.object
<CustomObject>
	<fields>
		<fullName>BLND_Approval__c</fullName>
		<label>Approval</label>
		<length>32000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Archive__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Archive</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>BLND_Attachment_Link__c</fullName>
		<label>Attachment Link</label>
		<length>40</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>BLND_Billing_Cost_Per_Day__c</fullName>
		<label>Billing Cost Per Day</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>BLND_Billing_Cost_Per_Use__c</fullName>
		<label>Billing Cost Per Use</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>BLND_Billing_Hourly_Rate__c</fullName>
		<label>Billing Hourly Rate</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>BLND_Billing_Overtime_Rate__c</fullName>
		<label>Billing Overtime Rate</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>BLND_Cost_Per_Day__c</fullName>
		<label>Cost Per Day</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>BLND_Cost_Per_Use__c</fullName>
		<label>Cost Per Use</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>BLND_Description__c</fullName>
		<label>Description</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Expansion__c</fullName>
		<label>Expansion</label>
		<length>32000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Extra_Field__c</fullName>
		<label>Extra Field</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Hourly_Rate__c</fullName>
		<label>Hourly Rate</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>BLND_Overtime_Rate__c</fullName>
		<label>Overtime Rate</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>BLND_Project_Link__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Project Link</label>
		<referenceTo>BLND_DFDT_Project__c</referenceTo>
		<relationshipName>R00N30000002PYjNEAW</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>BLND_Purpose__c</fullName>
		<label>Purpose</label>
		<length>80</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>BLND_Skill_Certification__c</fullName>
		<label>Skill Certification</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Cisco Certified Internetwork Expert</fullName>
				</value>
				<value>
					<fullName>Certified Lotus Professional</fullName>
				</value>
				<value>
					<fullName>Certified Lotus Specialist</fullName>
				</value>
				<value>
					<fullName>Certified Novell Administrator</fullName>
				</value>
				<value>
					<fullName>Certified Novell Engineer</fullName>
				</value>
				<value>
					<fullName>Certified Solaris Administrator</fullName>
				</value>
				<value>
					<fullName>Microsoft Certified Database Administrator</fullName>
				</value>
				<value>
					<fullName>Microsoft Certified Professional</fullName>
				</value>
				<value>
					<fullName>Microsoft Certified Solutions Developer</fullName>
				</value>
				<value>
					<fullName>Microsoft Certified Systems Engineer</fullName>
				</value>
				<value>
					<fullName>Novell Certified Internet Professional</fullName>
				</value>
				<value>
					<fullName>Oracle Certified Professional</fullName>
				</value>
				<value>
					<fullName>Project Management Professional</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>BLND_Skill_Level__c</fullName>
		<label>Skill Level</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>None</fullName>
				</value>
				<value>
					<fullName>Beginner</fullName>
				</value>
				<value>
					<fullName>Intermediate</fullName>
				</value>
				<value>
					<fullName>Advanced</fullName>
				</value>
				<value>
					<fullName>Expert</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>BLND_Skill_Set__c</fullName>
		<label>Skill Set</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>None</fullName>
				</value>
				<value>
					<fullName>Auditor</fullName>
				</value>
				<value>
					<fullName>Business Analyst</fullName>
				</value>
				<value>
					<fullName>Consultant</fullName>
				</value>
				<value>
					<fullName>Customer Relations</fullName>
				</value>
				<value>
					<fullName>Database Administrator</fullName>
				</value>
				<value>
					<fullName>Developer</fullName>
				</value>
				<value>
					<fullName>Lead Developer</fullName>
				</value>
				<value>
					<fullName>Engineer</fullName>
				</value>
				<value>
					<fullName>Lead Engineer</fullName>
				</value>
				<value>
					<fullName>Network Administrator</fullName>
				</value>
				<value>
					<fullName>Project Manager</fullName>
				</value>
				<value>
					<fullName>Senior Consultant</fullName>
				</value>
				<value>
					<fullName>Senior Database Administrator</fullName>
				</value>
				<value>
					<fullName>Senior Developer</fullName>
				</value>
				<value>
					<fullName>Task Manager</fullName>
				</value>
				<value>
					<fullName>Technical Architect</fullName>
				</value>
				<value>
					<fullName>Technical Lead</fullName>
				</value>
				<value>
					<fullName>Web Master</fullName>
				</value>
				<value>
					<fullName>Technical Writer</fullName>
				</value>
				<value>
					<fullName>QA Engineer</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>BLND_Version__c</fullName>
		<label>Version</label>
		<precision>4</precision>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<label>DreamTeam Resource</label>
	<nameField>
		<label>Resource Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>DreamTeam Resources</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>